<resources>
    <string name="app_name_yunwang">云望</string>

    <!-- Common use -->
    <string name="content_empty_layout_text">暂无内容</string>
    <string name="content_empty_tips">现在没有，请稍等</string>
    <string name="network_error_layout_text">网络异常</string>
    <string name="network_error_operate">点击重试</string>
    <string name="network_loading">正在加载中</string>
    <string name="btn_confirm_text">确定</string>
    <string name="btn_cancel_text">取消</string>

    <!-- MainActivity -->
    <string name="bottom_bar_record_task">录制任务</string>
    <string name="bottom_bar_record_video">录制视频</string>
    <string name="bottom_bar_record_user_center">我的</string>

    <!-- RecordTaskFragment -->
    <string name="record_task_fragment_title">录制任务</string>
    <string name="fail_request_index_data">获取首页数据失败</string>
    <string name="record_task_content" formatted="false">
         <![CDATA[
         <font color=#aaaaaa>任务内容：</font>
         <font color=#292929>对贵店</font>
         <font color=#d81b60>%d台</font>
         <font color=#292929>车进行录制</font>
        ]]>
    </string>
    <string name="record_task_time" formatted="false">
        <![CDATA[
         <font color=#aaaaaa>任务时间：%s</font>
        ]]>
    </string>
    <string name="record_distributive" formatted="false">
        <![CDATA[
         <font color=#aaaaaa>分配人：%s %s</font>
        ]]>
    </string>
    <string name="record_overview" formatted="false">
        <![CDATA[
         <font color=#aaaaaa>任务情况：</font>
         <font color=#d81b60>%d台</font><font color=#292929>未录制,</font>
         <font color=#d81b60>%d台</font><font color=#292929>已录制,</font>
         <font color=#d81b60>%d台</font><font color=#292929>验证失败</font>
        ]]>
    </string>

    <!-- RecordVideoFragment -->
    <string name="record_video_fragment_title">录制视频</string>
    <string name="btn_on_the_way_text">在途</string>
    <string name="fail_request_record_list_data">获取录制视频列表失败</string>
    <string name="fail_search_record_list_data">搜索失败</string>
    <string name="fail_request_on_the_way">请求在途失败</string>
    <string name="hin_search">请输入VIN码后六位选择拍摄车辆</string>

    <!-- UserFragment -->
    <string name="user_center_fragment_title">我的</string>
    <string name="username_item_title">名称:%s</string>
    <string name="account_item_title">账户:%s</string>
    <string name="email_item_title">邮箱:%s</string>
    <string name="phone_num_item_title">手机:%s</string>
    <string name="email_item_redirect_desc">修改邮箱</string>
    <string name="account_item_redirect_desc">修改密码</string>
    <string name="phone_num_item_redirect_desc">修改手机号</string>
    <string name="btn_logout_text">登出</string>

    <!-- LoginActivity -->
    <string name="input_username_item_hint">请输入账户名称</string>
    <string name="input_password_item_hint">请输入密码</string>
    <string name="input_password_item_hint2">密码由6-12位字母数字组合</string>
    <string name="alter_default_password_error_tip">保证两次密码一致，且不和初始密码一样</string>
    <string name="upload_work_location_tip">请确定你所在的位置是工作位置</string>
    <string name="upload_work_location_success">存储成功</string>
    <string name="login_error_location_tips">您存储的地理位置与您现处地址不符</string>

    <string name="btn_login_text">登录</string>
    <string name="forget_password_tips">如忘记密码，请联系经销商管理员</string>
    <string name="empty_username_tips">用户名不能为空</string>
    <string name="empty_password_tips">密码不能为空</string>
    <string name="fail_user_login">超出规定位置范围</string>

    <!-- AlterEmailActivity -->
    <string name="alter_email_activity_title">邮箱修改</string>
    <string name="input_email_item_title">邮箱</string>
    <string name="input_email_item_hint">请输入邮箱地址</string>
    <string name="fail_modify_email_tips">修改邮箱失败</string>

    <!-- AlterPhoneNumActivity -->
    <string name="alter_phone_num_activity_title">手机修改</string>
    <string name="input_phone_num_item_title">手机</string>
    <string name="input_phone_num_item_hint">请输入手机号码</string>
    <string name="fail_modify_phone_num_tips">修改电话号码失败</string>

    <!-- AlterPasswordActivity -->
    <string name="alter_password_activity_title">密码修改</string>
    <string name="input_old_password_item_title">旧密码</string>
    <string name="input_old_password_item_hint">旧密码</string>
    <string name="input_new_password_item_title">新密码</string>
    <string name="input_new_password_item_hint">新密码由6-12位字母...</string>
    <string name="input_repeat_password_item_title">重复密码</string>
    <string name="input_repeat_password_item_hint">重复密码</string>
    <string name="empty_old_password_tips">请输入旧密码</string>
    <string name="empty_new_password_tips">请输入新密码</string>
    <string name="empty_repeat_password_tips">请重复输入新密码</string>
    <string name="error_old_password_tips">您输入的密码有误</string>
    <string name="error_repeat_password_tips">您两次输入的密码不同</string>
    <string name="fail_modify_password_tips">修改密码失败</string>

    <!-- TaskOverviewActivity -->
    <string name="task_overview_activity_title">任务情况</string>
    <string name="tab_record_title">已录制(%d)</string>
    <string name="tab_not_record_title">未录制(%d)</string>
    <string name="tab_valid_fail_title">验证失败(%d)</string>
    <string name="fail_request_overview_data">获取任务情况失败</string>
    <string name="vin_code_prefix">Vin码:%s</string>
    <string name="record_status_prefix" formatted="false">
        <![CDATA[
         <font color=#292929>状态:</font>
         <font color=#aaaaaa>%s</font>
        ]]>
    </string>

    <!-- RecordActivity -->
    <string name="fail_upload_file">上传失败</string>
    <string name="success_upload_file">上传成功</string>


<!--    <string name="success_upload_file">录制视频中请按照提示进行拍摄</string>-->
<!--    <string name="success_upload_file">请对准Vin码</string>-->
<!--    <string name="success_upload_file">Vin码正在识别中...</string>-->
<!--    <string name="success_upload_file">Vin码识别成功，正在上传图片</string>-->
<!--    <string name="success_upload_file">上传成功.</string>-->
<!--    <string name="success_upload_file">图片上传中</string>-->



    <string name="take_a_new_photo">重拍</string>
    <string name="record_a_new_video">重录</string>
    <string name="upload">上传</string>
    <string name="camera_permission">请打开相机权限</string>
    <string name="write_permission">请打开读写权限</string>
    <string name="record_permission">请打开录制权限</string>
    <string name="picture_oom">图片太大，内存太小</string>
    <string name="picture_empty">数据为空</string>
    <string name="camera_busy">正在拍照或者正在录像</string>
    <string name="video_prepare_fail">准备录像失败</string>
    <string name="video_empty">没有录像</string>
    <string name="video_s">秒</string>
    <string name="video_max">录制视频要大于3s</string>
    <string name="media">照片和视频</string>
    <string name="media_handling">正在处理中</string>
    <string name="prepare_data">正在准备数据...</string>

    <!--输入字符限制-->
    <string name="input_string">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
