<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--    <LinearLayout-->
<!--        android:id="@+id/ll_no_info"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:orientation="vertical">-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@mipmap/img_empty_content" />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="暂无消息"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_gravity="center"/>-->
<!--    </LinearLayout>-->

    <com.rave.yunwang.widget.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/dividerColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tab_record_video"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tab_record_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iv_record_video"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_record_video_selected" />

            <TextView
                android:id="@+id/tv_record_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_bar_record_video"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_record_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tab_record_video">

            <ImageView
                android:id="@+id/iv_record_task"
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_record_task_selected" />

            <TextView
                android:id="@+id/tv_record_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_bar_record_task"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tab_record_video"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_mine_selected" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_bar_record_user_center"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>